--- a/service/package.json
+++ b/service/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "login_api",
+  "name": "service",
   "private": true,
   "version": "0.0.0",
-  "description": "Sails application for login",
+  "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "bcrypt": "^0.8.5",
     "ejs": "2.3.4",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.6.0",
@@ -20,11 +19,6 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.2.4",
     "include-all": "~0.1.6",
-    "jsonwebtoken": "^5.7.0",
-    "machinepack-passwords": "^2.3.0",
-    "passport": "^0.3.2",
-    "passport-http": "^0.3.0",
-    "passport-jwt": "^2.0.0",
     "rc": "1.0.1",
     "sails": "~0.12.1",
     "sails-disk": "~0.10.9"
@@ -36,7 +30,7 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/oavalos/login_api.git"
+    "url": "git://github.com/oavalos/service.git"
   },
   "author": "oavalos",
   "license": ""
